fix: fixed username overflow issue in container

--- a/src/app/features/user/pages/info/info.component.css
+++ b/src/app/features/user/pages/info/info.component.css
@@ -78,6 +78,9 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   color: var(--question-text);
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 .designation {
   margin: 0.3rem 0 1rem;
